# cosmoloj-py

./: .coveragerc  .gitignore  .gitlab-ci-doc.yml  .gitlab-ci-env.yml  .gitlab-ci-lint.yml  .gitlab-ci-pypi.yml  .gitlab-ci-test.yml  .gitlab-ci.yml  README.md  clean_conda.sh  pyenvs-lint.yml  pylintrc  pylintrc-test  pylintrc_bibliograpy-src-api  pylintrc_bibliograpy-test  pylintrc_multienv-src  pylintrc_src  pylintrc_taxref-src  pylintrc_test  sonar-project.properties
bibliograpy/: .gitlab-ci.yml  README.fr.md  README.md  bibliograpy.bib  environment_conda_publish.yml  mkdocs.fr.yml  mkdocs.yml  pyenvs-deps.yml  pyproject.toml
coord-operation/: .gitlab-ci.yml
coord_operation/: .gitlab-ci.yml  environment.yml  pyproject.toml
coordop/: .gitignore  .gitlab-ci.yml  bibliograpy.bib  bibliograpy.yml  environment_lint_test.yml  environment_pypi_pkg.yml  environment_test.yml  mkdocs.yml  multienv.yml  pyenvs-deps.yml  pyproject.toml
learning/: mutable.py  mutable2.py
math_operation/: .gitlab-ci.yml  README.md  environment.yml  pyproject.toml
multienv/: .gitlab-ci.yml  environment.yml  environment_conda_publish.yml  environment_doc.yml  environment_lint.yml  environment_lint_test.yml  environment_pypi_pkg.yml  environment_pypi_publish.yml  environment_strict.yml  environment_test.yml  mkdocs.en.yml  mkdocs.yml  multienv.yml  pyenvs-deps.yml  pyproject.toml
pycar/: .gitlab-ci.yml  README.md  bibliography.bib  mkdocs.yml  pyenvs-deps.yml  pyproject.toml
pylotable/: .gitlab-ci.yml  mkdocs.en.yml  mkdocs.fr.yml  mkdocs.yml  pyenvs-deps.yml  pyproject.toml
pylotable/demo/: common_const.py  data_random.py  exploration.py  group_coprocessor.py  log.conf  merge_coprocessor.py
pylotable/docs/: index.md
pylotable/resources/: check_py_version.sh
pylotable/src/pylotable/: coprocessor.py  gap_processor.py  gap_ts_processor.py  processor.py  win_coprocessor.py
pylotable/src/pylotable/data/: README.md
pylotable/src/pylotable/ts/: ts_coprocessor.py  win_ts_coprocessor.py
pylotable/test/: conftest.py  test_gap_processor.py  test_gap_ts_processor.py  test_win_ts_coprocessor.py
pylotable/test/ts/: test_win_ts_coprocessor.py
resources/: export_env.sh  init_conda.sh  reset_env.sh
simpleunit/: .gitlab-ci.yml  README.md  README_fr.md  bibliograpy.bib  demo.py  environment_conda_publish.yml  environment_doc.yml  environment_pypi_publish.yml  environment_test.yml  mkdocs.yml  multienv.yml  pyenvs-deps.yml  pyproject.toml  test.py
simpleunit/docs/: built-in.md  specification.md  standard.md
simpleunit/docs/en/: api.md  index.md  operators.md
simpleunit/resources/: check_py_version.sh
simpleunit/src/simpleunit/: __init__.py  dim_transform.py  unit_simple.py
simpleunit/test/: unit_simple_built_in_test.py  unit_simple_operator_test.py  unit_simple_test.py
taxref/: .env  .gitlab-ci.yml  README.md  environment.dev.yml  environment.yml  environment_lint.yml  environment_lint_test.yml  environment_strict.yml  environment_test.yml  multienv.yml  pyenvs-deps.yml  pyproject.toml  taxref.py  taxref11.py  taxref_test.py  test.py
unit-simple/: .gitlab-ci.yml  README.md  demo.py  environement.yml  environment.dev.yml  environment.yml  mkdocs.yml  pyproject.toml  test.py  unitSimple.py  unit_simple.py  unit_simple_operator_test.py  unit_simple_test.py
unit_simple/: .gitlab-ci.yml  README.md  README_fr.md  demo.py  environment.yml  test.py  (+3 more)
(+432 files in other folders)
