[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleunit"
dynamic = ["version"]
authors = [
  { name="Samuel Andrés", email="samuel.andres@yahoo.fr" },
]
description = "A simple measurement unit API to handle basic unit conversions."
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
keywords = ["units", "converter", "unit converter", "measure", "units of measurement"]

[project.urls]
"Homepage" = "https://github.com/SamuelAndresPascal/cosmoloj-py/tree/master/simpleunit"
"Documentation" = "http://cosmoloj.com/mkdocs/simpleunit/master"
"Specification" = "http://cosmoloj.com/su"

[tool.setuptools_scm]
tag_regex = '^(?:[\\w-]+-)?(?P<version>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$'
fallback_version = "0.0.0"
