[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleunit"
version = "0.0.0"
authors = [
  { name="Samuel Andrés", email="samuel.andres@yahoo.fr" },
]
description = "A simple measurement unit API to handle basic unit conversions."
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
keywords = ["units", "converter", "unit converter", "measure", "units of measurement"]

[project.urls]
"Homepage" = "https://github.com/SamuelAndresPascal/cosmoloj-py/tree/master/simpleunit"
"Documentation" = "http://cosmoloj.com/doc/simpleunit/en/master"
"Specification" = "http://cosmoloj.com/su"
